--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
+    "react-native-scrollable-tab-view": "^0.7.0",
     "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.0.0"
   },
